# MIMIC-Ext-Stroke

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: autofix.yml  ci.yml  claude-code.yml
config/: config.yaml
manuscript/: 00_title_abstract.md  01_introduction.md  02_methods.md  03_results.md  04_discussion.md  05_supplementary.md  06_references.md  REVIEW.md  conference_abstracts_stroke.md  response_to_reviewers.md  stroke_digital_twin_manuscript.docx  stroke_digital_twin_npj.md  stroke_digital_twin_supplementary.docx
notebooks/: 01_eda.ipynb  02_cohort_summary.ipynb  03_synthetic_evaluation.ipynb  04_digital_twin_demo.ipynb
outputs/: evaluation_results.json
outputs/tables/: cohort_summary_stats.csv  comorbidity_cooccurrence_table.csv  table1_by_mortality.csv  table1_by_subtype.csv  table1_overall.csv  table4_fidelity_comparison.csv  table5_clinical_rules.csv  table6_tstr_results.csv  table7_privacy_metrics.csv
scripts/: assemble_manuscript.py  generate_all_outputs.py  optimize_dgan.py  run_eicu_validation.py  run_full_evaluation.py
sql/: 01_stroke_cohort.sql  02_static_features.sql  03_timeseries_features.sql  04_eicu_stroke_cohort.sql
src/connection/: __init__.py  drift.py  state.py  uncertainty.py
src/data/: __init__.py  eicu_validation.py  extract.py  features.py  preprocess.py
tests/: test_bayesian_net.py  test_counterfactual.py  test_ctgan.py  test_dgan.py  test_eval_utility_privacy.py  test_evaluation.py  test_extract.py  test_features.py  test_hybrid.py  test_integration.py  test_preprocess.py  test_timeseries.py
(+12 files in other folders)
