[project]
name = "stroke-digital-twin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=17.0.0",
    "pgmpy>=0.1.25",
    "sdv>=1.17.0",
    "scikit-learn>=1.5.0",
    "torch>=2.4.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "tslearn>=0.6.3",
    "umap-learn>=0.5.6",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6.0"]
dgan = ["gretel-synthetics>=0.20.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["E402"]
